<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/mail_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/name"
                android:layout_below="@+id/name"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="17dp"
                android:ems="10"
                android:hint="E-mail"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/password_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/mail_sign"
                android:layout_below="@+id/mail_sign"
                android:layout_marginRight="50dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"/>

            <ImageView
                android:id="@+id/sign_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_sign"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="33dp"
                app:srcCompat="@drawable/sign_up"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="31dp"
                android:text="Sign up"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="Name"
                android:inputType="textPersonName"/>

            <ImageView
                android:id="@+id/log_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sign_button"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="24dp"
                app:srcCompat="@drawable/login"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"/>
</RelativeLayout>